Update to EpicPluginLib 3.0